--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cryptography==1.8.1
 docutils==0.13.1
 Fabric3==1.13.1.post1
 feedgenerator==1.9
+ghp-import==0.5.5
 idna==2.5
 Jinja2==2.9.6
 MarkupSafe==1.0
